[gd_scene load_steps=11 format=3 uid="uid://cveqi88yfygc1"]

[ext_resource type="PackedScene" uid="uid://cajufjns3158d" path="res://Scenes/Player/Player.tscn" id="1_pm0dl"]
[ext_resource type="Script" uid="uid://bqelhy865miid" path="res://scripts/main.gd" id="1_y5qig"]
[ext_resource type="PackedScene" uid="uid://pvr776ugj5v" path="res://Scenes/Items/enemy_speed_up_item.tscn" id="3_owb8q"]
[ext_resource type="PackedScene" uid="uid://dxl8mpdnhg8dq" path="res://Scenes/Items/item.tscn" id="3_rwv84"]
[ext_resource type="Shader" uid="uid://ce52nv17txwgh" path="res://art/shaders/background.gdshader" id="4_rd5yi"]
[ext_resource type="Texture2D" uid="uid://hp1svvvhp1bo" path="res://art/8614580.jpg" id="4_rjcux"]
[ext_resource type="PackedScene" uid="uid://bqi3n4fssgs2l" path="res://Scenes/Handlers/EnemyHandler.tscn" id="4_ybo78"]
[ext_resource type="PackedScene" uid="uid://1tee4hpui1pn" path="res://Scenes/hud.tscn" id="4_yohv7"]
[ext_resource type="PackedScene" uid="uid://b2thwqcug124p" path="res://Scenes/Handlers/item_spawner.tscn" id="6_8ngv0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wwyta"]
shader = ExtResource("4_rd5yi")
shader_parameter/scroll_speed = 0.05
shader_parameter/angle_degrees = 90.0
shader_parameter/repeat_x = 1.0
shader_parameter/repeat_y = 1.0
shader_parameter/tint = Color(1, 1, 1, 1)

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_y5qig")
player_scene = ExtResource("3_rwv84")
item_scene = ExtResource("3_owb8q")

[node name="background" type="TextureRect" parent="."]
process_mode = 1
material = SubResource("ShaderMaterial_wwyta")
offset_left = -646.0
offset_top = -927.0
offset_right = 1354.0
offset_bottom = 1073.0
texture = ExtResource("4_rjcux")
stretch_mode = 6

[node name="Player" parent="." instance=ExtResource("1_pm0dl")]
process_mode = 1

[node name="EnemyHandler" parent="." instance=ExtResource("4_ybo78")]
process_mode = 1

[node name="Item_spawner" parent="." instance=ExtResource("6_8ngv0")]
process_mode = 1
toggle_random = true

[node name="StartTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
process_mode = 1
position = Vector2(240, 450)

[node name="HUD" parent="." instance=ExtResource("4_yohv7")]
process_mode = 3

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="s_died" from="EnemyHandler" to="." method="_on_enemy_handler_s_died"]
[connection signal="s_died" from="EnemyHandler" to="Item_spawner" method="_on_enemy_handler_s_died"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
